# snakegame-rs

./: Cargo.toml  README.md
build-info/: build.rs
src/: main.rs
src/fltk/: main.rs
src/raylib/: config.rs  main.rs  mod.rs
src/raylib/init/: food.rs  mod.rs  snake.rs
